Fix mouse events on firefox
MouseEvent.offsetX works differently on firefox, causing the block to
flick back to (0,0) coordinate. Fix it by using page co-ordinates
instead.

--- a/static/css/flatris.css
+++ b/static/css/flatris.css
@@ -46,6 +46,12 @@ svg.well-svg, svg.float-svg {
   max-height: 176px;
 }
 
+svg.float-svg {
+  /* transform matches .container-left margin */
+  padding-left: 8px;
+  padding-top: 8px;
+}
+
 svg rect.square {
   rx: 5px;
   ry: 5px;
